# BioHackMunich_Novartis

./: .gitignore  README.md  main.py  pubchempy.ipynb  pyproject.toml
examples/: __init__.py  basic_usage.py  meta_TCM_with_smiles_pubchem_parallel_5.csv
experiments/: bayesian_tune.yaml  smoothing_out_learning.yaml
scripts/: data_preprocessing.ipynb  demo_visualization.py  dmso.ipynb  download_data.sh  download_processed.sh  download_raw.sh  gdrive_public.py  pubchempy_clean.ipynb  tune.py  visualize_smiles.py
src/: QC.py  __init__.py  main.py
src/config/: __init__.py  cls.py
src/data/: __init__.py  geometric_features.py  molecular_features.py
src/models/: __init__.py  base.py  gnn.py
src/preprocessing/: 00._DataPre.Rmd  01._Diff_analysis.Rmd  02._Evaluation of index misassignment.Rmd  03._Evaluation of reproducibility of HiMAP-seq.Rmd  04._Compare with RNA-seq or qPCR.Rmd  05._Compare ReadCount with UMI.Rmd  06._Replication of Samples in CIGS Data.Rmd  07._Hetamaps for CIGS Data.Rmd  08._Tsne plots for CIGS Data.Rmd  09._Zhangscore.Rmd  README.md
src/training/: __init__.py  lightning.py  trainer.py  utils.py
src/utils/: __init__.py  constants.py
