[project]
name = "biohackmunich-novartis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cirpy>=1.0.2",
    "ipykernel>=7.1.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "rdkit>=2023.9.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pubchempy>=1.0.5",
    "pytorch-lightning>=2.4.0",
    "black>=25.11.0",
]
